# simulator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  def_make_make.py  files_make_make.py  main_make_make.py  make_make.py  objdump_flags
src/include/: cpu.hpp  cpu_defs.hpp  cpu_memory.hpp  decode.hpp  elf_loader.hpp  imemory.hpp  instruction_semantic.hpp  instructions.hpp  iprogram_loader.hpp  log_helper.hpp  memory.hpp  sim.hpp  sim_cfg.hpp
src/source/: cpu.cpp  cpu_defs.cpp  cpu_memory.cpp  decode.cpp  elf_loader.cpp  instruction_semantic.cpp  main.cpp  memory.cpp  program_loader.cpp  sim.cpp
test/: add.asm  compile_asm.sh  compile_c_nolib.sh  factorial.c  hello_world.asm  minilib.h  multiply.asm  test_jal.c
